[gd_scene load_steps=4 format=2]

[ext_resource path="res://FallDetectorL0.gd" type="Script" id=1]
[ext_resource path="res://sound/sound effects/damage.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2118.28, 72.2469 )

[node name="FallDetectorL0" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1299.32, 1065.87 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_FallDetectorL0_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
